--- a/package.json
+++ b/package.json
@@ -3,17 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.23.4",
     "es6-promise": "^4.2.6",
     "isomorphic-fetch": "^2.2.1",
-    "moment": "^2.24.0",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
-    "react-moment": "^0.8.4",
+    "react-redux": "^7.1.1",
     "react-scripts": "2.1.5",
-    "react-select": "^2.4.1"
+    "react-select": "^2.4.1",
+    "redux": "^4.0.4",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
-    "start": "set PORT=9000 && react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
