--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
+  "homepage": "https://aacheblukov.github.io/itunes-search",
   "name": "itunes",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "antd": "^3.23.4",
     "es6-promise": "^4.2.6",
+    "gh-pages": "^3.1.0",
     "isomorphic-fetch": "^2.2.1",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
@@ -19,7 +21,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
